--- a/src/config.json
+++ b/src/config.json
@@ -95,7 +95,7 @@
       "protocol": "http"
     },
     "bot": {
-      "hostUrl": "https://api.telegram.org",
+      "hostUrl": "api.telegram.org",
       "port": 443,
       "contentType": "application/json",
       "token": "283721029:AAFcG5IWeemNqsW_-E3peO3O-elOSaKQ94E",
