--- a/src/config.json
+++ b/src/config.json
@@ -43,6 +43,7 @@
       "protocol": "http"
     },
     "bot": {
+      "protocol": "https",
       "hostUrl": "https://api.telegram.org",
       "port": 443,
       "contentType": "application/json",
@@ -95,6 +96,7 @@
       "protocol": "http"
     },
     "bot": {
+      "protocol": "https",
       "hostUrl": "api.telegram.org",
       "port": 443,
       "contentType": "application/json",
