Revert "mongo security"
This reverts commit 2d8c268c4170b05a4a5f5bcef02e1634b6a9f4a5.

--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,7 @@
 {"PROD":
   {
     "db": {
-      "dbURL": "mongodb://172.31.37.222:27017/pfin"
+      "dbURL": "mongodb://pfdb.edufun.me:27017/pfin"
     },
     "passport": {
       "google": {
