--- a/src/config.json
+++ b/src/config.json
@@ -119,6 +119,7 @@
     },
     "userjs": {
       "db": {
+        "name": "user",
         "login": "userjs",
         "pwd": "userjs",
         "host": "localhost",
