add kafkaListeners to config.json

--- a/src/config.json
+++ b/src/config.json
@@ -38,7 +38,10 @@
     "pusher": {
       "host": "http://pf.edufun.me:50000",
       "port": 50000,
-      "protocol": "http"
+      "protocol": "http",
+      "kafkaListeners": {
+        "notifyPayloadCreated": "create-message-response-processed"
+      }
     },
     "bot": {
       "protocol": "https:",
