--- a/src/config.json
+++ b/src/config.json
@@ -1,35 +1,41 @@
 {
   "PROD":
   {
-    "passport": {
-      "google": {
-        "GOOGLE_CLIENT_ID": "746362895265-vh9obqfi1vph4u18ue0q04tl8dg4c3p5.apps.googleusercontent.com",
-        "GOOGLE_CLIENT_SECRET": "jB7uVkXia1IbvZbJPM7ZoFKD",
-        "callbackURL": "https://pf.edufun.me/browser/auth/google/callback",
-        "authPATH": "/browser/auth/google",
-        "authCallbackPATH": "/browser/auth/google/callback",
-        "successAuthRedirectPATH": "/#/log-and-plan",
-        "failureAuthRedirectPATH": "/login",
-        "logoutURL": "/browser/auth/all/logout",
-        "scope": ["profile", "email"]
+    "clientapi": {
+      "auth": {
+        "passport": {
+          "google": {
+            "GOOGLE_CLIENT_ID": "746362895265-vh9obqfi1vph4u18ue0q04tl8dg4c3p5.apps.googleusercontent.com",
+            "GOOGLE_CLIENT_SECRET": "jB7uVkXia1IbvZbJPM7ZoFKD",
+            "callbackURL": "https://pf.edufun.me/browser/auth/google/callback",
+            "authPATH": "/browser/auth/google",
+            "authCallbackPATH": "/browser/auth/google/callback",
+            "successAuthRedirectPATH": "/#/log-and-plan",
+            "failureAuthRedirectPATH": "/login",
+            "logoutURL": "/browser/auth/all/logout",
+            "scope": ["profile", "email"]
+          },
+          "facebook": {
+            "FACEBOOK_APP_ID": "211916282554641",
+            "FACEBOOK_APP_SECRET": "f23de4663f74fd67e812a33ccebfeb25",
+            "callbackURL": "https://pf.edufun.me/browser/auth/facebook/callback",
+            "authPATH": "/browser/auth/facebook",
+            "authCallbackPATH": "/browser/auth/facebook/callback",
+            "successAuthRedirectPATH": "/#/log-and-plan",
+            "failureAuthRedirectPATH": "/login",
+            "logoutURL": "/browser/auth/all/logout",
+            "profileFields": ["id", "first_name", "last_name", "gender", "picture", "emails", "hometown", "locale"],
+            "scope": ["email", "user_about_me"]
+          },
+          "express": {
+            "session": {
+              "secret": "I want a lot of money!"
+            }
+          }
+        }
       },
-      "facebook": {
-        "FACEBOOK_APP_ID": "211916282554641",
-        "FACEBOOK_APP_SECRET": "f23de4663f74fd67e812a33ccebfeb25",
-        "callbackURL": "https://pf.edufun.me/browser/auth/facebook/callback",
-        "authPATH": "/browser/auth/facebook",
-        "authCallbackPATH": "/browser/auth/facebook/callback",
-        "successAuthRedirectPATH": "/#/log-and-plan",
-        "failureAuthRedirectPATH": "/login",
-        "logoutURL": "/browser/auth/all/logout",
-        "profileFields": ["id", "first_name", "last_name", "gender", "picture", "emails", "hometown", "locale"],
-        "scope": ["email", "user_about_me"]
-      }
-    },
-    "express": {
-      "port": 80,
-      "session": {
-        "secret": "I want a lot of money!"
+      "express": {
+        "port": 80,
       }
     },
     "kafka": {
@@ -115,35 +121,41 @@
   },
   "TEST":
   {
-    "passport": {
-      "google": {
-        "GOOGLE_CLIENT_ID": "746362895265-jogqun87k8s64pc6t2022tedstjnitg6.apps.googleusercontent.com",
-        "GOOGLE_CLIENT_SECRET": "bmkMaEVEECLq_ThUIfHzLkcr",
-        "callbackURL": "http://pftest.edufun.me/browser/auth/google/callback",
-        "authPATH": "/browser/auth/google",
-        "authCallbackPATH": "/browser/auth/google/callback",
-        "successAuthRedirectPATH": "/#/log-and-plan",
-        "failureAuthRedirectPATH": "/login",
-        "logoutURL": "/browser/auth/all/logout",
-        "scope": ["profile", "email"]
+    "clientapi": {
+      "auth": {
+        "passport": {
+          "google": {
+            "GOOGLE_CLIENT_ID": "746362895265-jogqun87k8s64pc6t2022tedstjnitg6.apps.googleusercontent.com",
+            "GOOGLE_CLIENT_SECRET": "bmkMaEVEECLq_ThUIfHzLkcr",
+            "callbackURL": "http://pftest.edufun.me/browser/auth/google/callback",
+            "authPATH": "/browser/auth/google",
+            "authCallbackPATH": "/browser/auth/google/callback",
+            "successAuthRedirectPATH": "/#/log-and-plan",
+            "failureAuthRedirectPATH": "/login",
+            "logoutURL": "/browser/auth/all/logout",
+            "scope": ["profile", "email"]
+          },
+          "facebook": {
+            "FACEBOOK_APP_ID": "211916282554641",
+            "FACEBOOK_APP_SECRET": "f23de4663f74fd67e812a33ccebfeb25",
+            "callbackURL": "http://pftest.edufun.me/browser/auth/facebook/callback",
+            "authPATH": "/auth/facebook",
+            "authCallbackPATH": "/auth/facebook/callback",
+            "successAuthRedirectPATH": "/#/log-and-plan",
+            "failureAuthRedirectPATH": "/login",
+            "logoutURL": "/browser/auth/all/logout",
+            "profileFields": ["id", "first_name", "last_name", "gender", "picture", "emails", "hometown", "locale"],
+            "scope": ["email", "user_about_me"]
+          },
+          "express": {
+            "session": {
+              "secret": "I want a lot of money!"
+            }
+          }
+        }
       },
-      "facebook": {
-        "FACEBOOK_APP_ID": "211916282554641",
-        "FACEBOOK_APP_SECRET": "f23de4663f74fd67e812a33ccebfeb25",
-        "callbackURL": "http://pftest.edufun.me/browser/auth/facebook/callback",
-        "authPATH": "/auth/facebook",
-        "authCallbackPATH": "/auth/facebook/callback",
-        "successAuthRedirectPATH": "/#/log-and-plan",
-        "failureAuthRedirectPATH": "/login",
-        "logoutURL": "/browser/auth/all/logout",
-        "profileFields": ["id", "first_name", "last_name", "gender", "picture", "emails", "hometown", "locale"],
-        "scope": ["email", "user_about_me"]
-      }
-    },
-    "express": {
-      "port": 80,
-      "session": {
-        "secret": "I want a lot of money!"
+      "express": {
+        "port": 80
       }
     },
     "kafka": {
